--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -9,7 +9,7 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  /* background: #fff url(/bookmark/src/img/background.png) center bottom/cover no-repeat; */
-  background: linear-gradient(to right, #30CFD0 0%, #291188 100%);;
+  background: #fff url(/src/img/background.jpg) center /cover no-repeat;
+  /* background: linear-gradient(to right, #30CFD0 0%, #291188 100%); */
   position: fixed;
 }
